argo/apps/booklore/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booklore
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booklore
  template:
    metadata:
      labels:
        app: booklore
    spec:
      containers:
        - name: booklore
          image: booklore/booklore:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
